--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/typeorm": "^7.1.5",
     "@types/uuid": "^8.3.0",
     "bcrypt": "^5.0.0",
+    "fs": "0.0.1-security",
     "install": "^0.13.0",
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
@@ -66,7 +67,7 @@
     "supertest": "^6.0.0",
     "ts-jest": "^26.4.3",
     "ts-loader": "^8.0.8",
-    "ts-node": "^9.0.0",
+    "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.5"
   },
